# mobile-agent

./: .gitignore  pyproject.toml
src/: agent.py  android.py  main.py  mobile_tools.py  ui_dict_processing.py  utils.py
