[project]
name = "mobile-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.10",
    "langchain-openrouter>=0.1.0",
    "langgraph>=1.1.0",
    "python-toon>=0.1.3",
    "uiautomator2>=3.5.0",
    "xmltodict>=1.0.4",
]
